[WIP] refacto swagger code
add the refacto of the code that permit us to add a route in our code and add it in the make it possible to have it on the swagger ui, I need to refacto the main.go file and also test another time the functionnality
